Updated tablet work css

--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,38 @@ header .font {
         font-size: 70%;
     }
 
+    /*MAIN*/
+    #main-html h3 {
+        font-size: 40px;
+    }
 
+    /*ABOUT*/
+    #early-life h2, 
+    #stanford h2 {
+        font-size: 100%;
+    }
+
+    #stanford h3 {
+        font-size: 85%;
+    }
+
+    /*WORK*/
+    #hr h2, #pos h2,
+    #contact h2 {
+        font-size: 100%;
+    }
+
+    #contact p {
+        font-size: 60%;
+    }
+
+    img {
+        width: 40%;
+    }
+
+    /*HOBBIES*/
+
+    /*CONTACT*/
 }
 
 /*****DESKTOP MEDIA SCREEN*****/
@@ -297,4 +328,16 @@ header .font {
     header h1 {
         font-size: 110px;
     }
+
+
+    /*MAIN*/
+
+    /*ABOUT*/
+
+    /*WORK*/
+
+    /*HOBBIES*/
+
+    /*CONTACT*/
+
 }
